[gd_scene load_steps=3 format=2]

[ext_resource path="res://base_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://targets.gd" type="Script" id=5]

[node name="player" type="Node2D"]

[node name="targets" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="walk_center" type="Position2D" parent="targets"]
position = Vector2( 6, 14 )

[node name="arm_L" type="Position2D" parent="targets"]
position = Vector2( 6, 14 )

[node name="arm_R" type="Position2D" parent="targets"]
position = Vector2( -9, 14 )

[node name="leg_L" type="Position2D" parent="targets"]
position = Vector2( -12, 66 )

[node name="leg_R" type="Position2D" parent="targets"]
position = Vector2( 10, 66 )

[node name="arm_L_SB" type="Position2D" parent="targets"]
position = Vector2( 6, 14 )

[node name="arm_R_SB" type="Position2D" parent="targets"]
position = Vector2( -9, 14 )

[node name="leg_L_SB" type="Position2D" parent="targets"]
position = Vector2( -12, 61 )

[node name="leg_R_SB" type="Position2D" parent="targets"]
position = Vector2( 10, 61 )

[node name="base_player" parent="." instance=ExtResource( 1 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 24, 16 )
enabled = true
cast_to = Vector2( 0, 64 )
